Run NavBarTuner external
Change-Id: Ie3c7f6b2e24ecb241f4cf877dff97589fb993089

--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -372,6 +372,14 @@
                   android:process=":tuner"
                   android:parentActivityName="com.potatoproject.fries.MainActivity"
                   android:exported="true">
+        </activity>       
+
+        <activity android:name=".tuner.NavBarActivity"
+                  android:theme="@style/TunerSettings"
+                  android:label="@string/nav_bar"
+                  android:process=":tuner"
+                  android:parentActivityName="com.potatoproject.fries.MainActivity"
+                  android:exported="true">
         </activity>
 
         <activity
